# madder

./: Cargo.toml  madder.yml
src/: configuration.rs  generate.rs  init.rs  main.rs
