[package]
name = "madder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.10", features = ["derive"]}
regex = "1.5"
handlebars = "4.3.1"
serde_json = "1.0.82"
yaml-rust = "0.4.5"
dialoguer = "0.10.1"
config = "0.13.1"
